# airgradient-cellular-payload

./: rfc_airgradient-cellular-payload.md
client/: CMakeLists.txt  README.md
client/examples/: demo.cpp
client/src/: main.cpp  payload_encoder.cpp  payload_encoder.h  payload_types.h
client/test/: CMakeLists.txt  test_batching.cpp  test_dual_channel.cpp  test_encoder.cpp  test_single_channel.cpp  test_sizes.cpp
server/: README.md  package.json
server/src/: example_usage.js  payload_decoder.js  payload_types.js  test_decoder.js
